# StortSpelBTH

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Credits.txt  README.md  ReadMe.txt  banner_resize.psd  game.code-workspace  game.sln  icon.psd  main.cpp  readme.rtf
Presumed Dead setup/: Presumed Dead setup.vdproj
assets/: config.cfg
assets/models/: Swarm_Model.mtl
assets/puzzles/: test1.puz
assets/shaders/: second.frag.spv  second.vert.spv  shader.frag.spv  shader.vert.spv
cmake/: setup_conan.cmake
game/: .clang-format  Combat.h  CombatSystem.hpp  GameScene.cpp  GameScene.h  Movement.h  MovementSystem.hpp  Room.h  TestSystem.hpp  game.vcxproj  game.vcxproj.filters  main.cpp  puzzle_T.puz  stats.csv  stats_.csv  test_stats.csv
game/assets/: ColliderCubes.fbx  ColliderCubes1_2.fbx  ColliderTest2.fbx
game/assets/models/: Ability_Healing.mtl  Cube.fbx  HealingAbility.mtl  Hurricane Kick.fbx  KnockbackAbility.mtl  MainSword.fbx  PerkSword.mtl  Perk_AtkSpeed.mtl  Perk_Dmg.mtl  Perk_Hp.mtl  Perk_Movement.mtl  Perk_Stamina.mtl  Portal.fbx  Portal.mtl  PortalOff.mtl  PortalOn.mtl  RockFence.mtl  Shockwave.mtl  Standard_Run.fbx  Swarm_Model.mtl  Swarm_RotTest.mtl  Sword.mtl  alter.mtl  character_ready.fbx  door.mtl  fire_orb.mtl  ghost.mtl  grave.mtl  hump.mtl  ice_orb.mtl  light_orb.mtl  rock.mtl  room_piece_0.mtl  room_piece_1.mtl  room_piece_3.mtl  sword.fbx  tempRock.mtl
game/assets/models/.mayaSwatches/: PerkSwordTex.png_hcm.swatch
game/assets/models/Character/: CharDodge.fbx  CharHeavyAttack.fbx  CharHeavyAttackOld.fbx  CharIdle.fbx  CharInwardAttack.fbx  CharJumpAttack.fbx  CharKnockbackAttack.fbx  CharOutwardAttack.fbx  CharRun.fbx  CharRun2.fbx  CharSlashAttack.fbx  CharSpinAttack.fbx  DeathAnim.fbx  Heavy Weapon Swing.fbx
game/assets/models/GameOverScene/: Crystal.mtl  GraveStone.mtl  GroundPillar.mtl  GroundTop.mtl  LightPillar.mtl
game/assets/models/Lich/: Lich_Attack.fbx  Lich_Walk.fbx
game/assets/models/Menu/: SittingIdle.fbx  SittingIdle2.fbx  lobby.mtl  player_menu.fbx  scene.mtl  signpost.mtl
game/assets/models/Tank/: TankCharge.fbx  TankGroundHump.fbx  TankRaiseShield.fbx  TankWalk.fbx
game/assets/models/Tiles/: Floor.mtl  room_piece_4.mtl
game/assets/puzzleParts/: test.puz
game/assets/textures/.mayaSwatches/: Ability_Healing.png_hcm.swatch  Ability_KnockbackTex.png_hcm.swatch  HealingAbility.png_hcm.swatch  HealingAbilityTex.png_hcm.swatch  LightningTex.png_hcm.swatch  PerkSwordTex.png_hcm.swatch  Perk_AtkSpeedTex.png_hcm.swatch  Perk_AtkSpeedTexNew.png_hcm.swatch  Perk_AtkSpeedTexRed.png_hcm.swatch  Perk_AtkSpeedTexTest.png_hcm.swatch  Perk_AtkSpeedTexWhite.png_hcm.swatch  Perk_DmgTex.png_hcm.swatch  Perk_HpTex.png_hcm.swatch  Perk_MoveTex.png_hcm.swatch  Perk_MovementTex.jpg_hcm.swatch  Perk_MovementTex.png_hcm.swatch  Perk_StaminaTex.png_hcm.swatch  Swarm_Texture.png_hcm.swatch  background.png_hcm.swatch  defaultMaterial.png_hcm.swatch  doorTex.png_hcm.swatch  lampTex.png_hcm.swatch  scroll_heal.jpg_hcm.swatch  tileTex2.png_hcm.swatch
game/scripts/: CameraMovement.lua  Combat.lua  GameOver.lua  GameOverScene.lua  MainMenu.lua  Movement.lua  Player.lua  TrailerCameraMovement.lua  Tutorial.lua  TutorialScene.lua  UI.lua  closedoor.lua  gamescene.lua  levelEditor.lua  levelEditorUI.lua  loadBlob.lua  loadLich.lua  loadTank.lua  moveRock.lua  opendoor.lua  script.lua  settings.lua  spin.lua  system.lua
game/scripts/prefabs/: CameraPrefab.lua  MovementPrefab.lua  prefab.lua
game/src/: FileMaker.hpp  Puzzle.h  Room.cpp  Room.h  RoomHandler.cpp  RoomHandler.h  WorldLayout.h
game/src/AI/: PathFinding.h
game/src/Ai/Behaviors/: HelperFuncs.cpp  HelperFuncs.hpp
game/src/Components/: AICombatTank.hpp  Abilities.h  AiCombat.h  AiCombatLich.hpp  AiCombatSwarm.h  AiElite.hpp  AiMovement.h  CameraMovement.h  Combat.h  HealArea.h  HealthComp.h  Movement.h  NetworkCombat.h  Perks.h  Room.h
game/src/LevelEditor/: ObjectHandler.cpp  ObjectHandler.h
game/src/Network/: DataFetcher.cpp  DataFetcher.hpp  NetworkDataFetcher.hpp  NetworkHandlerGame.cpp  NetworkHandlerGame.h  NetworkLobbyScene.cpp  NetworkLobbyScene.h  ServerGameMode.cpp  ServerGameMode.h
game/src/Scenes/: CreateAPuzzel.cpp  CreateAPuzzel.h  CreateAPuzzle.cpp  CreateAPuzzle.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  GameSceneNetwork.cpp  GameSceneNetwork.h  LevelEditor.cpp  LevelEditor.h  LoadScene.cpp  LoadScene.h  LoadingScene.cpp  LoadingScene.h  LobbyScene.cpp  LobbyScene.h  MainMenu.cpp  MainMenu.h  NetworkAI.cpp  NetworkAI.h  NewAINetwork.cpp  NewAINetwork.hpp  PuzzleCreatorLua.lua  RoomTesting.cpp  RoomTesting.h  TutorialScene.cpp  TutorialScene.h  logInScene.cpp  logInScene.h
game/src/Scripts/: Prefab.lua  Prefabs.lua  PuzzleCreatorLua.lua  PuzzleLoader.lua
game/src/ServerGameModes/: NetworkGameScene.cpp  NetworkGameScene.h  NetworkLobbyScene.cpp  NetworkLobbyScene.h  TheServerGame.cpp  TheServerGame.h
game/src/ServerGames/: TheServerGame.cpp  TheServerGame.h
game/src/Settings/: Settings.cpp  Settings.h
game/src/Systems/: AiCombatSystem.hpp  AiMovementSystem.hpp  BloodSystem.hpp  CameraMovementSystem.hpp  CombatFunctionProfiler.cpp  CombatFunctionProfiler.h  CombatLogger.h  CombatSystem.hpp  FollowEntitySystem.hpp  HealSystem.hpp  HealthBarSystem.hpp  MovementSystem.hpp  ParticleRemoveComponent.hpp  ParticleRemoveEntity.hpp  PerkAbilityOutsideRangeSystem.hpp
game/src/World Handling/: ParticleSystemGenerator.hpp  PuzzleHandler.cpp  PuzzleHandler.h  Room Generator.cpp  Room Generator.h  Room Generator2.cpp  Room Generator2.h  Room Handler.cpp  Room Handler.h  Room Layout.cpp  Room Layout.h  RoomHandler.cpp  RoomHandler.h  SpawnHandler.cpp  SpawnHandler.hpp
game/vengine_assets/models/: room_piece_0.mtl  room_piece_1.mtl
game/vengine_assets/shaders/: second.frag.spv  shader.frag.spv  shader.vert.spv  shaderAnim.vert.spv  ui.frag.spv  ui.vert.spv
install/lib/: libassimpd.so.5
install/lib/cmake/assimp-5.2/: assimpTargets-debug.cmake
install/share/Tracy/: TracyConfig-debug.cmake  TracyConfig.cmake
(+34 files in other folders)
